force-app/main/default/objects/Animal_Playgroup__c/Animal_Playgroup__c.object-meta.xml
<CustomObject>
    <label>Animal Playgroup</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Animal Playgroup Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Playgroups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>