force-app/main/default/objects/Animal_Playgroup__c/fields/Common_Playgroup_Note_Sections__c.field-meta.xml
<CustomField>
    <fullName>Common_Playgroup_Note_Sections__c</fullName>
    <label>Common Playgroup Note Sections</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greeting</fullName>
            </value>
            <value>
                <fullName>After Greeting</fullName>
            </value>
            <value>
                <fullName>Approached by another dog</fullName>
            </value>
            <value>
                <fullName>Handler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>