force-app/main/default/objects/Animal_Playgroup__c/fields/Common_Playgroup_Notes__c.field-meta.xml
<CustomField>
    <fullName>Common_Playgroup_Notes__c</fullName>
    <label>Common Playgroup Notes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greeted – tense</fullName>
            </value>
            <value>
                <fullName>Greeted – politely</fullName>
            </value>
            <value>
                <fullName>Greeted – rude but playful</fullName>
            </value>
            <value>
                <fullName>Greeted – playful</fullName>
            </value>
            <value>
                <fullName>Greeted – no greeting</fullName>
            </value>
            <value>
                <fullName>Greeted – rude, aroused, not social</fullName>
            </value>
            <value>
                <fullName>Disengaged - remained tense</fullName>
            </value>
            <value>
                <fullName>Disengaged – relaxed some</fullName>
            </value>
            <value>
                <fullName>Disengaged – relaxed and milled</fullName>
            </value>
            <value>
                <fullName>Played – chase</fullName>
            </value>
            <value>
                <fullName>Played – wrestle</fullName>
            </value>
            <value>
                <fullName>Played – rude</fullName>
            </value>
            <value>
                <fullName>Played – roughly</fullName>
            </value>
            <value>
                <fullName>Played – boxed</fullName>
            </value>
            <value>
                <fullName>Played – arousal escalated</fullName>
            </value>
            <value>
                <fullName>Aggressed</fullName>
            </value>
            <value>
                <fullName>Took breaks</fullName>
            </value>
            <value>
                <fullName>Unresponsive to dogs’ correction</fullName>
            </value>
            <value>
                <fullName>Tolerated play solicitations</fullName>
            </value>
            <value>
                <fullName>Tolerated rude behavior</fullName>
            </value>
            <value>
                <fullName>Appropriately corrected rude behavior</fullName>
            </value>
            <value>
                <fullName>Overcorrected rude approach</fullName>
            </value>
            <value>
                <fullName>Defensive</fullName>
            </value>
            <value>
                <fullName>Responded to handler correction</fullName>
            </value>
            <value>
                <fullName>Unresponsive to handler correction</fullName>
            </value>
            <value>
                <fullName>Requires drag for TO</fullName>
            </value>
            <value>
                <fullName>Requires Muzzle</fullName>
            </value>
            <value>
                <fullName>Requires handler to crate breaks in play</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>