force-app/main/default/objects/Animal_Playgroup__c/fields/Last_Playgroup_Session__c.field-meta.xml
<CustomField>
    <fullName>Last_Playgroup_Session__c</fullName>
    <label>Last Playgroup Session</label>
    <type>Date</type>
</CustomField>