force-app/main/default/objects/Animal_Playgroup__c/fields/Other_Dogs__c.field-meta.xml
<CustomField>
    <fullName>Other_Dogs__c</fullName>
    <label>Other Dogs</label>
    <type>TextArea</type>
</CustomField>