force-app/main/default/objects/Animal_Playgroup__c/fields/Playgroup_Count__c.field-meta.xml
<CustomField>
    <fullName>Playgroup_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Playgroup Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>