force-app/main/default/objects/Animal_Playgroup__c/fields/Playgroup_Individual_Notes__c.field-meta.xml
<CustomField>
    <fullName>Playgroup_Individual_Notes__c</fullName>
    <label>PG Notes for this Dog</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>