force-app/main/default/objects/Animal_Playgroup__c/fields/Playgroup_Session__c.field-meta.xml
<CustomField>
    <fullName>Playgroup_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Playgroup Session</label>
    <referenceTo>Playgroup_Session__c</referenceTo>
    <relationshipLabel>Animal Playgroups</relationshipLabel>
    <relationshipName>Animal_Playgroups</relationshipName>
    <type>Lookup</type>
</CustomField>