force-app/main/default/objects/Animal_Playgroup__c/fields/Playgroup_Session_Notes__c.field-meta.xml
<CustomField>
    <fullName>Playgroup_Session_Notes__c</fullName>
    <label>Playgroup Session Notes</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>